# MachGL

./: .gitignore  .gitmodules  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  DataStructures.h  Dependencies.lua  FileUtilities.h  Image.cpp  Image.h  Includes.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  MachGL.h  MachGL.sln  MachGL.vcxproj  MachGL.vcxproj.filters  Matrix.h  Model.cpp  Model.h  Noise.h  Object.cpp  Object.h  Plane.cpp  Plane.h  README.md  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  SimpleRect.cpp  SimpleRect.h  SimplexNoise.h  Skybox.cpp  Skybox.h  (+21 more)
MachGL/: CMakeLists.txt  MachGL.h  MachPCH.cpp  MachPCH.h  premake5.lua
MachGL/CoreAssets/CoreShaders/: HDR.frag  HDR.mglsdr  bloom.frag  dynamicRect.frag  dynamicRect.vert  gausian.mglsdr  gaussian.frag  gaussian.vert  particle.mglsdr  reflectedObject.frag  reflectedObject.mglsdr  reflectedObject.vert  simple.frag  simple.mglsdr  simple.vert  simpleRect.frag  simpleRect.vert  skybox.frag  skybox.mglsdr  skybox.vert
MachGL/Headers/API/: API.h  GLFWWindow.h
MachGL/Headers/API/OpenAL/: OpenALSoundBuffer.h  OpenALSoundSource.h
MachGL/Headers/API/OpenGL/: OpenGLBatchRenderer.h  OpenGLEnvironmentMap.h  OpenGLFramebuffer.h  OpenGLImage.h  OpenGLObject.h  OpenGLPlane.h  OpenGLRenderer2D.h  OpenGLRenderer3D.h  OpenGLShader.h  OpenGLUniformBuffer.h
MachGL/Headers/API/Vulkan/: VulkanShader.h
MachGL/Headers/Audio/: AudioFile.h  SoundBuffer.h  SoundSource.h
MachGL/Headers/Core/: Cache.h  CoreFunctions.h  DataStructures.h  Includes.h  PlatformDetection.h  Window.h
MachGL/Headers/Graphics/: BatchRenderer.h  EnvironmentMap.h  Framebuffer.h  Image.h  Plane.h  PostEffect.h  Renderer2D.h  Renderer3D.h  Shader.h  SimpleRect.h  SoftwareRender.h  Submittable3D.h  UniformBuffer.h
MachGL/Headers/Graphics/Buffer/: Buffer.h  IndexBuffer.h  VertexArray.h
MachGL/Headers/Maths/: Constants.h  Maths.h  Matrix.h  Vector.h
MachGL/Headers/Object/: Bound.h  Camera.h  Light.h  Model.h  Object.h  Skybox.h  Terrain.h
MachGL/Headers/Particle/: CubeParticle.h  Particle.h  ParticleCluster.h  QuadParticle.h
MachGL/Headers/Plane/: Plane.h  SimpleCircle.h  SimpleRect.h  SimpleTriangle.h
MachGL/Headers/Scene/: Group.h  Scene.h
MachGL/Headers/Screens/: Splash.h
MachGL/Headers/Utilities/: FileUtilities.h  Serializer.h  Timer.h
MachGL/Source/API/: API.cpp  GLFWWindow.cpp
MachGL/Source/API/OpenAL/: OpenALSoundBuffer.cpp  OpenALSoundSource.cpp
MachGL/Source/API/OpenGL/: OpenGLBatchRenderer.cpp  OpenGLEnvironmentMap.cpp  OpenGLFramebuffer.cpp  OpenGLImage.cpp  OpenGLObject.cpp  (+5 more)
MachGL/Source/Audio/: AudioFile.cpp  SoundBuffer.cpp  SoundSource.cpp
MachGL/Source/Core/: Cache.cpp  Window.cpp
MachGL/Source/Graphics/: BatchRenderer.cpp  EnvironmentMap.cpp  Framebuffer.cpp  Image.cpp  Plane.cpp  PostEffect.cpp  Renderer2D.cpp  Renderer3D.cpp  Shader.cpp  SimpleRect.cpp  SoftwareRender.cpp  UniformBuffer.cpp
MachGL/Source/Object/: Camera.cpp  Model.cpp  Object.cpp  Skybox.cpp  Terrain.cpp
MachGL/Source/Particle/: ParticleCluster.cpp  QuadParticle.cpp
MachGL/Source/Plane/: Plane.cpp  SimpleRect.cpp  SimpleTriangle.cpp
MachGL/Source/Scene/: Group.cpp  Scene.cpp
MachGL/Source/Screens/: Splash.cpp
MachGL/Source/Utilities/: Serializer.cpp
Sandbox/: CMakeLists.txt  TestScene.cpp  TestScene.h  main.cpp  premake5.lua
Sandbox/Shaders/: batch.mglsdr  test.frag  test.mglsdr  test.vert
(+6 files in other folders)
