###############################################################

# If your project is not contained in the root directory
# AND this file is not automatially generated, copy and
# paste this file into your project folder, changing the 
# name of the project to containing directory. 

cmake_minimum_required(VERSION 3.0)
project(Sandbox)
set(SOURCE main.cpp)
add_executable(&(PROJECT_NAME) $(SOURCE))

###############################################################